fixed scrollbar issue on top listings https://jira.t-3.com/browse/ALLBEST-130

--- a/src/components/Listing/style.scss
+++ b/src/components/Listing/style.scss
@@ -5,7 +5,7 @@
   border-left: 1px solid #f0f0f0;
   padding-left: 20px;
   // margin-left: 20px;
-  overflow: hidden;
+  overflow-y: scroll;
   @media(max-width: 767px) {
     display: flex;
     justify-content: center;
